<resources>

    <string name="app_name">有缘再聊</string>
    <string name="conversation">会话</string>
    <string name="contact">联系人</string>
    <string name="discover">发现</string>
    <string name="personal_blog">个人博客</string>
    <string name="donate_author">捐赠作者</string>
    <string name="loading">正在加载…</string>
    <string name="loading_failed">加载失败</string>
    <string name="github">github</string>
    <string name="add_friends">添加好友</string>
    <string name="group_chat">发起群聊</string>
    <string name="voice_call">语音呼叫</string>
    <string name="video_call">视频通话</string>
    <string name="logouting">退出登录…</string>
    <string name="choose_avatar">选择头像</string>
    <string name="signature">梦想注定是孤独的旅行</string>
    <string name="delete_friend">删除好友</string>
    <string name="delete_friend_message">您是否要和%s友尽？</string>
    <string name="delete_friend_conversation">您是否要删除和%s的对话？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="deleting_friend">正在删除好友…</string>
    <string name="delete_friend_failed">删除好友失败，请重试</string>
    <string name="delete_friend_success">删除好友成功</string>
    <string name="get_contacts_error">获取最新联系人失败</string>
    <string name="send">发送</string>
    <string name="chat_with">与%s聊天中</string>
    <string name="no_text_message">非文本消息</string>
    <string name="send_failed">发送失败</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="dynamic">动态</string>
    <string name="weather">天气</string>
    <string name="mine_location">我的位置</string>
    <string name="receive_new_message">收到新消息</string>
    <string name="max_unread_count">99</string>
    <string name="user_login_another_device">用户在其他设备登录</string>
    <string name="delete_conversation">删除会话</string>
    <string name="friend_not_found">未搜索到好友</string>
    <string name="add">添加</string>
    <string name="added">已添加</string>
    <string name="add_friend_reason">快加我</string>
    <string name="add_friend_success">发送好友请求成功</string>
    <string name="add_friend_failed">发送好友请求失败</string>
    <string name="searching">拼命搜索中…</string>
    <string name="China">中国</string>
    <string name="forecast">预报</string>
    <string name="air_quality">空气质量</string>
    <string name="aqi">AQI指数</string>
    <string name="pm2.5">PM2.5指数</string>
    <string name="life_advice">生活建议</string>
    <string name="failed_to_get_weather_information">获取天气信息失败</string>
    <string name="slash">\</string>
    <string name="celsius">℃</string>
    <string name="comfort">舒适度：</string>
    <string name="car_wash_index">洗车指数：</string>
    <string name="sports_advice">运动建议：</string>
    <string name="excellent">优</string>
    <string name="good">良</string>
    <string name="mild_pollution">轻度污染</string>
    <string name="moderately_polluted">中度污染</string>
    <string name="severe_pollution">重度污染</string>
    <string name="serious_pollution">严重污染</string>
    <string name="thank_you">十分感谢</string>
    <string name="forget_it">算了吧</string>
    <string name="donate_little">捐赠一点</string>
    <string name="thank_you_very_much">还是很感谢你</string>
    <string name="really_thankful">非常感谢你</string>
    <string name="jump_success">跳转成功</string>
    <string name="jump_failed">跳转失败</string>
    <string name="publish_dynamic">发布动态</string>
    <string name="say_something">说点什么…</string>
    <string name="uploading">正在上传…</string>
    <string name="create_dynamic_success">创建动态成功</string>
    <string name="create_dynamic_failed">创建动态失败</string>
    <string name="updating">正在更新…</string>
    <string name="people_nearby">附近的人</string>
    <string name="read">阅读</string>
    <string name="sports">运动</string>
    <string name="music">音乐</string>
    <string name="video">视频</string>
    <string name="update_theme">更换主题</string>
    <string name="about_author">关于作者</string>
    <string name="settings">通用设置</string>
    <string name="please_enter_the_voice_chat_object">请输入语音聊天对象</string>
    <string name="please_enter_the_video_chat_object">请输入视频聊天对象</string>

    <!-- 注册登录 -->
    <string name="quit_login">退出登录</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="login_failed">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="logout_success">退出登录成功</string>
    <string name="logout_failed">退出登录失败</string>
    <string name="user_name_error">用户名不合法，3到10位，首字母必须是字母</string>
    <string name="user_password_error">密码不合法，3到10位字符</string>
    <string name="user_password_confirm_error">两次输入密码不一致</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="repeat_password">重复密码</string>
    <string name="register_failed_user_exist">用户名已存在</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="registering">注册中…</string>
    <string name="logining">登录中…</string>

</resources>
