<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_github"
        android:icon="@drawable/ic_nav_github"
        android:title="@string/github" />

    <item
        android:id="@+id/nav_personal_blog"
        android:icon="@drawable/ic_nav_blog"
        android:title="@string/personal_blog" />

    <item
        android:id="@+id/nav_about_author"
        android:icon="@drawable/ic_nav_author"
        android:title="@string/about_author" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_quit"
        android:icon="@drawable/ic_quit"
        android:title="@string/quit" />
</menu>