<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <!-- 动态 -->
    <RelativeLayout
        android:id="@id/dynamic_rlyt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_ripple">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:src="@drawable/ic_discover_dynamic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="65dp"
            android:text="@string/dynamic"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>

    <!-- 天气 -->
    <RelativeLayout
        android:id="@+id/weather_rlyt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_ripple">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:src="@drawable/ic_discover_weather" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="65dp"
            android:text="@string/weather"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>

    <!-- 我的位置 -->
    <RelativeLayout
        android:id="@+id/location_rlyt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_ripple">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:src="@drawable/ic_discover_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="65dp"
            android:text="@string/mine_location"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>