<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.iceboy.destinedchat.ui.activity.LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="#2fa881" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="@string/login"
                    android:textColor="#FFCC00"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <!-- 输入用户名 -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/username_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:paddingBottom="2dp"
                        android:textColor="#2fa881"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="13sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <!-- 输入密码 -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/password"
                        android:inputType="numberPassword"
                        android:paddingBottom="2dp"
                        android:textColor="#2fa881"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="13sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <!-- 点击登录 -->
                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/login"
                    android:textColor="#d3d3d3" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/forget_password"
                android:textColor="#9a9a9a"
                android:textSize="12sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <!-- 切换到注册 -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/register_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/cv"
        android:layout_alignTop="@id/cv"
        android:layout_marginEnd="-20dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/plus"
        android:transitionName="loginFab"
        app:fabSize="normal" />

</RelativeLayout>