<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iceboy.destinedchat.ui.activity.LoginActivity">

    <FrameLayout
        android:layout_width="330dp"
        android:layout_height="410dp"
        android:layout_centerInParent="true"
        android:paddingTop="70dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#2ea67f"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <!-- 输入用户名 -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/username_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="@string/username"
                            android:inputType="textPersonName"
                            android:paddingBottom="2dp"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <!-- 输入密码 -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/password_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="@string/password"
                            android:inputType="numberPassword"
                            android:paddingBottom="2dp"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <!-- 再次输入密码 -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/repeat_password_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="@string/repeat_password"
                            android:inputType="numberPassword"
                            android:paddingBottom="2dp"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <!-- 注册 -->
                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/bt_shape_2"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/register"
                    android:textColor="#2fa881" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- 切换到登录 -->
        <!-- 使用android:transitionName属性给两个布局中的共享元素指定一个相同的名字 -->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/login_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/plus_x"
            android:transitionName="loginFab"
            app:fabSize="normal" />

    </FrameLayout>

</RelativeLayout>